--- a/index.html
+++ b/index.html
@@ -10,13 +10,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/main.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
-    <section class="story">
-        <h2 class="story__tittle">Trending stories</h2>
-        <a href="" class="story__"></a>
+    <section class="direction">
+        <h2 class="direction__title">Trending stories</h2>
+        <a href="" class="direction__link link">View all > </a>
+        <ul class="direction__list list">
+            <li class="direction__item item"><div class="direction__box">
+                <div class="direction__image"><img src="./images/yoga.png" alt="healing holiday" width="261px" /></div>
+                <h3 class="direction__tittle">The many benefits of taking a healing holiday</h3>
+                <p class="direction__excerpt">‘Helaing holidays’ are on the rise 
+tohelp maximise your health and happines...</p>
+                <a  class="direction__link link"href="">Read more</a>
+            </div></li>
+            <li class="blog__item item"><div class="direction__box">
+                <img src="./images/food.png" alt="restaurants&teahouse" />
+                <h3 class="direction__tittle">The best Kyoto restaurant to try Japanese food</h3>
+                <p class="direction__excerpt">From tofu to teahouses, here’s our guide to Kyoto’s best restaurants
+to visit...</p>
+                <a  class="direction__link link"href="">Read more</a>
+            </div</li>
+            <li class="blog__item item"><div class="direction__box">
+                <img src="./images/ruins.png" alt="ruins" />
+                <h3 class="direction__tittle">Skip Chichen Itza and head
+to this remote Yucatan</h3>
+                <p class="direction__excerpt">It’s remote and challenging to get,
+but braving the jungle and exploring
+these ruins without the...</p>
+                <a  class="direction__link link"href="">Read more</a>
+            </div</li>
+            <li class="blog__item item"><div class="direction__box">
+                <img src="./images/surf.png" alt="surfing" />
+                <h3 class="direction__tittle">Surf’s up at these beginner
+spots around the world</h3>
+                <p class="direction__excerpt">If learning to surf has in on your to-
+do list for a while, the good news
+is: it’s never too late...</p>
+                <a  class="direction__link link"href="">Read more</a>
+            </div</li>
+        </ul>
+        
+
 
     </section>
 </div>
