--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -45,7 +45,7 @@
               </div>
               <div class="item__wrap">
                 <h3 class="direction__title">
-                  The many benefits of taking a healing holiday
+                  The many benefits of </br>taking a healing holiday
                 </h3>
                 <p class="direction__excerpt">
                   ‘Helaing holidays’ are on the rise tohelp maximise your health
